# irt2m

./: .gitignore  README.md  env.fish  setup.cfg
conf/: logging.yaml  multitail.conf
conf/models/kgc/: base.yaml  readme.txt
conf/models/kgc/data/: cde-large.yaml  cde-medium.yaml  cde-small.yaml  cde-tiny.yaml
conf/models/kgc/models/: complex-lcwa.yaml  complex-slcwa.yaml
conf/models/kgc/wandb/: large-complex-lcwa-random.yaml  large-complex-slcwa-random.yaml  medium-complex-grid.yaml  medium-complex-lcwa-random.yaml  medium-complex-slcwa-random.yaml  small-complex-grid.yaml  small-complex-lcwa-random.yaml  small-complex-slcwa-random.yaml  tiny-complex-grid.yaml  tiny-complex-lcwa-random.yaml
conf/models/projector/: base.yaml
conf/models/projector/data/: irt2-cde-large.yaml  irt2-cde-medium.yaml  irt2-cde-small.yaml  irt2-cde-tiny.yaml
conf/models/projector/models/: multi-affine-projector.yaml  multi-complex-joint.yaml  single-affine-projector.yaml  single-complex-joint.yaml
conf/models/projector/wandb/: jmc-random-2.yaml  jmc-random-large.yaml  jmc-random.yaml  jsc-random.yaml  pmac-context-sizes.yaml  psac-context-sizes.yaml
irt2m/: __init__.py  cli.py  data.py  eval.py  evaluation.py  migrations.py  models.py  train.py
notes/: config_csv.py  evaluation.fish  evaluation.txt
