[metadata]
name = irt2m
version = 0.1
author = Felix Hamann
author_email = felix.hamann@hs-rm.de

description = IRT2 Models
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/lavis-nlp/irt2m
project_urls =
    Bug Tracker = https://github.com/lavis-nlp/irt2m/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.9
install_requires =
    ktz<2
    click>=8.1, <9
    pyyaml>=5
    transformers>=4, <5
    torch>=1.11, <1.12
    pretty_errors

[options.extras_require]
dev =
    build
    ipdb
    ipython
    black
    flake8

[options.entry_points]
console_scripts =
                irt2m = irt2m.cli:main


[flake8]
# black default
max-line-length = 89
ignore =
       D105  # docstring for magic methods
       D107  # docstring in __init__